# sorcery

./: .gitignore  AUDIT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Glyph_Master_Plan.md  Glyph_White_Paper.md  Grok_Code_Fast_1_CrabCamera_Sorcery_Experience.md  README.md  SORCERY_COMPLETION_PLAN.md  Sorcery_Reset_Test_Bound_Spells.md  Sorcery_Spec_Evolution.md  effective_comply_raptor_mini.md  glyph_v_0_minimal_intent_spec_language_ast_compliance_verifier_plan_demo.md  sorcery_final_doctrine_v_1.md
.github/: FUNDING.yml
case-studies/: CRABCAMERA_AUDIO_IMPLEMENTATION.md  CREEPY_JSON_PUBLIC_API.md  README.md  improving_sorcery_directions_white_paper.md
examples/: GLYPH_GAP_TO_GLYPH_MAPPING.md  INDEPENDENT_EVALUATION_GPT5.2.md  LESSONS_CONTEXT_ASYMMETRY.md  README.md  REHYDRATION_COMPARISON_V1_V2.md  WHITEPAPER_EXPERIMENT_ASSESSMENT.md  inference_abi.spell  parse.spell  tokenize.spell
examples/clsx/: README.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md
examples/clsx/rehydrated/: clsx.ts
examples/clsx/rehydrated2/: clsx.ts
examples/clsx/rehydrated2/tests/: filters_falsy.test.ts  space_separated.test.ts  variadic.test.ts
examples/clsx/spells/: clsx.spell
examples/dlv/: README.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md
examples/dlv/rehydrated/: dlv.ts
examples/dlv/rehydrated2/: dlv.ts
examples/dlv/spells/: dlv.spell
examples/fast-deep-equal/: README.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md
examples/fast-deep-equal/rehydrated/: equal.ts
examples/fast-deep-equal/rehydrated2/: equal.ts
examples/fast-deep-equal/spells/: equal.spell
examples/mitt/: README.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md  emit.spell  mitt.rehydrated.ts  off.spell  on.spell
examples/mitt/rehydrated2/: mitt.ts
examples/mitt/spells/: emit.spell  handler_map.spell  mitt.spell  off.spell  on.spell
examples/ms/: README.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md
examples/ms/rehydrated/: ms.ts
examples/ms/rehydrated2/: ms.ts
examples/ms/spells/: ms.spell
examples/once/: README.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md
examples/once/rehydrated/: once.ts
examples/once/rehydrated2/: once.ts
examples/once/spells/: once.spell
examples/shimmy/: DIFF_ANALYSIS.md  README.md  REHYDRATION_FORENSICS.md  WHITEPAPER.md  WHITEPAPER_GPT-5.2.md
examples/shimmy/rehydrated/: Cargo.toml  README.md
examples/shimmy/rehydrated/src/: api.rs  auto_discovery.rs  cli.rs  lib.rs  main.rs  model_registry.rs  openai_compat.rs  server.rs  templates.rs
examples/shimmy/rehydrated/src/engine/: adapter.rs  llama.rs  mod.rs
examples/shimmy/rehydrated2/: Cargo.toml
examples/shimmy/rehydrated2/src/: anthropic_compat.rs  api.rs  auto_discovery.rs  cli.rs  lib.rs  main.rs  model_registry.rs  openai_compat.rs  server.rs  templates.rs
examples/shimmy/rehydrated2/src/engine/: adapter.rs  llama.rs  mod.rs
examples/shimmy/spells/: api.spell  auto_discovery.spell  cli.spell  engine.spell  engine_adapter.spell  engine_llama.spell  model_registry.spell  openai_compat.spell  server.spell  templates.spell
examples/syntax/: README.md  glyph_verify.invocation.spell  glyph_verify.spell  inference_abi.spell  parse.spell  tokenize.spell
tools/glyph/: Cargo.toml  demo.glyph  demo.rs
tools/glyph-verify/: Cargo.toml  README.md  SIGIL_TEST.md
tools/glyph-verify/src/: lib.rs  main.rs
tools/glyph-verify/tests/: sigil.rs
tools/glyph/src/: lib.rs  main.rs
(+91 files in other folders)
