[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glyph-cli"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
